删掉了shop服务的product-shop，在product实体里加了shopid字段。在shop服务增加了shopinfo实体用来记录shop的展示信息